k8s/web/web.deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:

  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    # type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web

    spec:

      volumes:
        - name: users-code-path
          hostPath:
            path: /tmp/hexlet-basics
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock

      containers:

        - name: nginx
          imagePullPolicy: Always
          image: gcr.io/hexlet-basics/nginx:v92
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
        - name: phoenix
          securityContext:
            privileged: true
          imagePullPolicy: Always
          image: gcr.io/hexlet-basics/app:v92
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          resources:
            requests:
              cpu: 10m
          command:
            - make
            - start
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: /tmp/hexlet-basics
              name: users-code-path
            - mountPath: /var/run/docker.sock
              name: docker-sock
            # - mountPath: /opt
            #   name: users-code
