k8s/web/frontend.service.yml
---

kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  annotations:
    external-dns.alpha.kubernetes.io/hostname: code-basics.com.
spec:
  selector:
    app: web
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
