k8s/web/frontend.ingress.yml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    external-dns.alpha.kubernetes.io/hostname: code-basics.com.
spec:
  backend:
    serviceName: frontend-service
    servicePort: 8080
